--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ color: var(--corDestaque);
 
 .topBanner{
     width: 100%;
-    height: 100vh;
+    height: 120vh;
     padding: 15px;
     display: flex;
     flex-direction: column;
@@ -531,7 +531,7 @@ color: var(--corDestaque);
 
 .portfolio{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr ;
     
 }
 
@@ -626,9 +626,6 @@ footer ul li{
 }
 
 @media screen and (max-width: 812px) {
-    .topBanner{
-        height: 120vh;
-    }
 
     header nav ul{
         display: none;
