--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ color: var(--corDestaque);
     padding: 10px;
     list-style: none;
     font-size: 35px;
-    border-radius: 25px;
+    border-radius: 60%;
     color: var(--corTexto);
     background-color: var(--corDestaque);
     border: solid white 1px;
@@ -542,8 +542,18 @@ color: var(--corDestaque);
     width: 300px;
     height: 350px;
     margin: 10px;
-    background-color: teal;
     border-radius: 10px;
+}
+
+.portfolio div img{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    opacity: 0.2;
+}
+
+.portfolio div img:hover{
+    opacity: 1;
 }
 
 #mc-embedded-subscribe-form{
